Finished prototyping of new design for the month review reporting logic. The MonthReviewsController now uses the TimeEntryEnumerable, Calendar, Statistics and ActivitySummary classes in the MonthReview module to feed the view with data.

--- a/app/views/month_reviews/_activity_summary.html.erb
+++ b/app/views/month_reviews/_activity_summary.html.erb
@@ -1,9 +1,9 @@
 <div class="calender_activities">
 
   <table style="border-collapse: collapse;">
-    <%=  activities_list(user_work_month.activity_summary.billable) %>
+    <%=  activities_list(activity_summary.billable) %>
     <tr><td>&nbsp;</td></tr>
-    <%=  activities_list(user_work_month.activity_summary.unbillable) %>
+    <%=  activities_list(activity_summary.unbillable) %>
   </table>
 
   <br/><br/>
