Upgraded Rails version from 2.3.4 to 2.3.8. Fixed the most obvious errors that followed, but some deprecation warnings remain. Fixed a bug in the VacationsController show action and view that caused a crash when no vacation activity is configured.

--- a/app/views/vacations/show.html.erb
+++ b/app/views/vacations/show.html.erb
@@ -2,7 +2,7 @@
 <%= render :partial => 'holidays/sub_menu' -%> 
 <%= render :partial => "shared/flash_output" %>
 
-<% if Configuration.instance.vacation_activity %>
+<% if defined? @vacation_overview %>
 
 	<div class="navigation">
 		<h3 class="compact">
