--- a/app/views/month_reviews/show.html.erb
+++ b/app/views/month_reviews/show.html.erb
@@ -7,7 +7,7 @@
 <% form_tag user_month_review_path(@user), :method => :get do %>
   <p>
     <label for="date">Period</label>
-    <%= date_select "month_start_date", "date", {:start_year => Date.today.year - 5 , :end_year => Date.today.year + 1, :discard_day => true, :default => @period.start} %>
+    <%= date_select "month_start_date", "date", {:start_year => Date.today.year - 5 , :end_year => Date.today.year + 1, :discard_day => true, :default => @month_start} %>
     <%= submit_tag 'View' %>
   </p>
 <% end %>
@@ -16,7 +16,7 @@
 
 <h4 class=""><%= @calendar.month_name -%></h4>
 
-<%= render :partial => "activity_summary", :locals => { :activity_summary => @activity_summary, :user => @user, :beginning_of_month => @beginning_of_month } %>
+<%= render :partial => "activity_summary", :locals => { :activity_summary => @activity_summary, :user => @user, :beginning_of_month => @month_start } %>
 <%= render :partial => "calendar_table", :locals => { :calendar => @calendar, :statistics => @statistics, :user => @user }%>
 
 <% if @statistics.available? %>
@@ -41,14 +41,14 @@
 <br/>
 
 <div class="center">
-  <% if @period.locked? -%>
+  <% if @locked -%>
     <input type="submit" value="You have submitted this month" disabled="true">
-  <% elsif @period.ready_for_approval? -%>
+  <% elsif @ready_for_approval -%>
     <p>
       <% form_tag lock_user_time_entries_path(@user) do -%>
         <%= hidden_field_tag "user_id", @user.id %>
-        <%= hidden_field_tag "start_date", @period.start %>
-        <%= hidden_field_tag "end_date", @period.end %>
+        <%= hidden_field_tag "start_date", @month_start %>
+        <%= hidden_field_tag "end_date", @month_end %>
         <%= submit_tag "Submit for billing"%>
       <% end -%>
     </p>
