Small refactoring to time entries index/controller (load data in controller instead of view).

--- a/app/views/time_entries/index.html.erb
+++ b/app/views/time_entries/index.html.erb
@@ -18,18 +18,16 @@
 		<div id="<%= day %>">
 			<p>
 				<div id='<%= "#{day}_header" %>'>
- 					<%= render :partial => "day_header", :locals => { :date => @date.+(index), :day => day} %>
+ 					<%= render :partial => "day_header", :locals => { :date => @date + index, :day => day} %>
+				</div>			    
+				<div id='<%= "#{day}_time_entries_container"%>'>
+	 				<%= render :partial => "time_entries", :locals => { :time_entries => @time_entries.for_date(@date + index), :day => day } %>
 				</div>
-			    
-			<div id='<%= "#{day}_time_entry_form"%>'></div>
-			<div id='<%= "#{day}_time_entries_container"%>'>
- 				<%= render :partial => "time_entries", :locals => { :time_entries => TimeEntry.find_all_by_user_id_and_date(@user.id, @date.+(index)), :day => day } %>
-			</div>
 			</p>
 		</div>
-	<% end -%>
+	<% end %>
 </p>
-<% if @current_user.admin -%>
+<% if @current_user.admin %>
   <br />
   <hr />
   <p>
@@ -40,4 +38,4 @@
       <%= submit_tag "View for selected user" %>
     <% end -%>
   </p>
-<% end -%>
+<% end %>
