--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,12 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 	<head>
+		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 		<title><%= title %></title>
 		<%= stylesheet_link_tag "application" %>
 		<%= javascript_include_tag :defaults %>
-        <%= stylesheet_link_tag "pagination" %>
-        <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+		<%= javascript_include_tag 'jquery-1.4.2.min.js', 'jquery-ui-1.8.2.custom.min.js' %>
+    <%= stylesheet_link_tag 'pagination', 'flick/jquery-ui-1.8.2.custom.css' %>
 	</head>
 	<body>
 		<div id="container">
