Moved refreshing of day and week totals (in time_entries/index) to a separate action in the TimeEntriesController.

--- a/app/views/time_entries/destroy.js.erb
+++ b/app/views/time_entries/destroy.js.erb
@@ -1,3 +1,5 @@
 jQuery('#time_entry_row_<%= @time_entry.id %>').remove();
-jQuery('#<%= @day_name %>_sum').html('<%= @day_sum %>');
-jQuery('#activity_<%= @time_entry.activity.id %>_week_sum').html('<%= @week_sum %>');
+
+<% if @no_more_time_entries %>
+  jQuery('#existing_time_entries').hide();
+<% end %>
