--- a/app/views/time_entries/create.js.erb
+++ b/app/views/time_entries/create.js.erb
@@ -1,12 +1,14 @@
 <% if @errors %>
   jQuery('#time_entry_dialog_errors').html('<%= escape_javascript(@errors) %>');
-<% else %>  
-  jQuery('#existing_time_entries').show();
-
+<% else %>
   // Add a new row to the table with existing time entries for this activity and day
 	jQuery('#existing_time_entry_rows').append("<tr id='time_entry_row_<%= @time_entry.id %>'>" +
 	                                           "<%= escape_javascript(render :partial => 'existing_time_entry', :locals => { :user => @user, :time_entry => @time_entry }) %>" +
 	                                           "</tr>");
+	
+  if (jQuery('#existing_time_entry_rows').children().length == 1) {
+    jQuery('#existing_time_entries').show();
+	}
 	
 	// Update the time entry form to display a form for adding a new time entry
 	jQuery('#time_entry_form').html("<%= escape_javascript(render :partial => 'time_entry_form', 
