--- a/app/views/time_entries/_time_entry_form.html.erb
+++ b/app/views/time_entries/_time_entry_form.html.erb
@@ -10,11 +10,11 @@
 		<% end -%>
 	<p>
 		<%= f.label :hours %>
-		<%= f.text_field :hours %>
+		<%= f.text_field :hours, :id => 'hours_input' %>
 	</p>
 	<p>
 		<%= f.label :notes %>
-		<%= f.text_field :notes %>
+		<%= f.text_field :notes, :id => 'notes_input' %>
 	</p>
 	<p>
 		<%= f.label :hour_type %>
