--- a/app/views/time_entries/new_activity.js.erb
+++ b/app/views/time_entries/new_activity.js.erb
@@ -14,3 +14,5 @@ jQuery('#activity_id option').each(function(index) {
 if (jQuery('#activity_id option').length == 0) {
 	jQuery('#add_activity').hide();
 }
+
+jQuery('#week_activities tr:last').effect('highlight');
