--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -1,4 +1,5 @@
 <div class="sub_menu">
+<%= link_to "Departments", departments_path %> |
 <%= link_to "Users", users_path %> |
 <%= link_to "Customers", customers_url %> |
 <%= link_to "Hour Types", hour_types_path %> |
