Added blank department option to user

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
 
   <p>
     <%= f.label :department %><br />
-     <%= f.collection_select(:department_id, Department.all, :id, :name) %>
+     <%= f.collection_select(:department_id, Department.all, :id, :name, :include_blank => true) %>
   </p>
 
   <p>
