--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,13 +21,24 @@
 
 <br/>
     <h3>Assignments</h3>
+    <% if @user.projects.size > 0 %>
     <ul>
       <%  @user.projects.each do |project| %>
         <li><%= "#{project.name} (#{project.customer.name})" %></li>
       <% end %>
     </ul>
 
+    <% if @user.operative_status == 'retired' -%>
+      <%= link_to "Unassign from all projects", user_unassign_path(@user) %><p></p>
+      <br/>
+    <% end -%>
+      <% else -%>
+      No assignments
+       <br/>
+    <% end -%>
 <br/>
+
+
 <%= link_to 'Edit', edit_user_path(@user) %> 
 <% if @current_user.admin -%>
 	|
